--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "cheerio": "^0.22.0",
-    "cliui": "^3.2.0",
+    "cli-table2": "^0.2.0",
     "ramda": "^0.22.1"
   }
 }
