--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mustache": "^2.2.1"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "cli-table2": "^0.2.0",
     "ramda": "^0.22.1"
