--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "cli-table2": "^0.2.0",
+    "lodash.camelcase": "^4.3.0",
     "ramda": "^0.22.1"
   }
 }
